# texpilot

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
frontend/: package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/projects/[id]/: page.tsx
frontend/src/app/teams/: page.tsx
frontend/src/components/: app-sidebar.tsx
frontend/src/components/ui/: button.tsx  sidebar.tsx
src/texpilot/: main.py
src/texpilot/auth/: model.py  repository.py
src/texpilot/common/: database.py  dependencies.py
src/texpilot/common/repository/: base.py
