[project]
name = "texpilot"
version = "0.1.0"
description = "TeXPilot Authentication System"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "fastapi[all]",
    "sqlalchemy",
    "pydantic[email]",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "python-multipart",
    "uvicorn"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["texpilot"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.109.0"
sqlalchemy = "^2.0.25"
pydantic = {extras = ["email"], version = "^2.5.3"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
